# internal/api/api.go
@@ -67,7 +67,9 @@ func New(ctx context.Context, cfg *config.Config, db *db.DB, lg *slog.Logger) (*
 	// user routes
 	e.GET("/user", userapi.GetMany)
 	e.POST("/user", userapi.Create)
+	e.GET("/user/me", userapi.GetMe)
 	e.GET("/user/items", userapi.GetItems)
+	e.GET("/user/:id", userapi.GetUserByID)
 
 	// auth routes
 	e.GET("/auth", authapi.Get)
@@ -100,6 +102,7 @@ var protectedRoutes = routesConfig{
 	"/item/:id/like":   {http.MethodPost},
 	"/item/:id/unlike": {http.MethodPost},
 	"/user/items":      {http.MethodGet},
+	"/user/me":         {http.MethodGet},
 	"/auth":            {http.MethodGet},
 	"/auth/logout":     {http.MethodPost},
 }
